Ran into many issues with Webpack when trying to include pythonia in py_interface.js, so I have commented out the import statement to continue working on the rest of the code in the meantime. Pulling state of image out of Viewport.js with success in getting the save image button to work, but now the state of image is not updating to cause the canvas to get populated.

--- a/ui/src/components/ToolBox.module.css
+++ b/ui/src/components/ToolBox.module.css
@@ -96,17 +96,18 @@ input[type=number] {
     padding-top: 0.5em;
     padding-bottom: 1em;
 
-    color: var(--primary-text);
-    background: conic-gradient(from 180deg, var(--accent-dim), var(--accent-bright) 50%, var(--accent-dim));
-    border: 1px solid var(--accent-text);
+    color: var(--accent-text);
+    background: var(--accent-dim);
+    border: var(--btn-border);
     border-radius: 0.3rem;
     outline: none;
+    cursor: default;
     transition: 0.3s;
 }
 
 .apply > button:hover {
     width: 35%;
-    border: 1px solid var(--primary-text);
+    border: 1px solid var(--accent-bright);
     outline: 1px solid var(--accent-text);
     border-radius: 0.6rem;
     padding-top: 0.3em;
